--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for {{$dist->name}}
 
+0.1    Tue Jul 21 19:27:57 2015
+       Remove growl.
+
 0.01   Thu Nov 27 16:12:43 2008
        Initial release.
        Switch to Dist::Zilla
